mongodb connection eroor

--- a/views/admin/add-product.hbs
+++ b/views/admin/add-product.hbs
@@ -2,19 +2,19 @@
     <form action="/admin/add-product" enctype="multipart/form-data" method="post">
       <div class="mb-3">
         <label  class="form-label">Name</label>
-        <input type="text" class="form-control" name="name" placeholder="Enter Product Name">
+        <input type="text" class="form-control" name="name" placeholder="Enter Product Name" value="iphone">
       </div>
       <div class="mb-3">
         <label  class="form-label">Category</label>
-        <input type="text" class="form-control" name="category">
+        <input type="text" class="form-control" name="category" value="mobile">
       </div>
       <div class="mb-3">
         <label  class="form-label">Description</label>
-        <input type="text" class="form-control" name="description">
+        <input type="text" class="form-control" name="description" value="good phone">
       </div>
       <div class="mb-3">
-        <label for="" class="form-label">price</label>
-        <input type="number" class="form-control" name="price"></div>
+        <label for="" class="form-label" >price</label>
+        <input type="number" class="form-control" name="price" value = 424332></div>
       <div class="mb-3">
         <label class="form-label">Image</label>
         <input type="file" class="form-control" name="image">
