--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -11,6 +11,7 @@
                 <tr>
                     <th scope="col">Name</th>
                     <th scope="col">Category</th>
+                    <th scope="col">Description</th>
                     <th scope="col">Image</th>
                 </tr>
             </thead>
@@ -19,7 +20,8 @@
                 <tr>
                     <td>{{this.name}}</td>
                     <td>{{this.category}}</td>
-                    <td><img src="{{this.img}}" class="view-product-img" alt=""></td>
+                    <td>{{this.description}}</td>
+                    <td><img src="/images/product-images/{{this._id}}.jpg" class="view-product-img" alt=""></td>
                 </tr>
                 {{/each}}
             </tbody>
