signup login logout session keeping implemented

--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -3,12 +3,13 @@
         <a class="navbar-brand" href="#"><img src="/images/logo-color.svg" alt="" class="logo-img">
             <h1 class="logo">Basket of Goods</h1>
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
-            aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler mt-2" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-            <ul class="navbar-nav  mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse " id="navbarTogglerDemo03">
+            <ul class="navbar-nav me-auto  mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
@@ -17,6 +18,23 @@
                 </li>
 
             </ul>
+            <div class="dropdown me-5">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    {{#if user}}
+                    {{user.name}}
+                    {{else}}
+                    Account
+                    {{/if}}
+                </button>
+                <ul class="dropdown-menu">
+                    {{#if user}}
+                    <li><a class="dropdown-item text-danger" href="/logout">Log Out</a></li>
+                    {{else}}
+                    <li><a class="dropdown-item" href="/login">Log In</a></li>
+                    {{/if}}
+                </ul>
+            </div>
         </div>
     </div>
 </nav>
