--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -1,7 +1,7 @@
 <div class="container">
-    <div class="row">
+    <div class="row justify-content-center justify-content-lg-start">
         {{#each products}}
-        <div class="card m-3 p-2" style="width: 18rem;">
+        <div class="card  m-3 p-2" style="width: 18rem;">
             <img src="/images/product-images/{{this._id}}.jpg" class="img-card-view" alt="...">
             <div class="card-body">
                 <h5 class="card-title">{{this.name}}</h5>
