--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -22,6 +22,12 @@
                     <td>{{this.category}}</td>
                     <td>{{this.description}}</td>
                     <td><img src="/images/product-images/{{this._id}}.jpg" class="view-product-img" alt=""></td>
+                    <td class="">
+                        <a href="/admin/edit-product" class="btn btn-secondary m-1">Edit</a>
+                    </td>
+                    <td>
+                        <a href="/admin/delete-product/{{this._id}}" class="btn btn-danger m-1" onclick="return confirm('Are you want to Delete {{this.name}}?')">Delete</a>
+                    </td>
                 </tr>
                 {{/each}}
             </tbody>
