--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -14,8 +14,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Cart</a>
+                    <a class="nav-link" aria-current="page" href="/cart">Cart</a>
                 </li>
+                {{#if user}}
+                <li class="nav-item">
+                    <a href="" class="nav-link">Orders</a>
+                </li>
+                {{/if}}
 
             </ul>
             <div class="dropdown me-5">
