--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -3,7 +3,9 @@
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
         <input type="email" class="form-control" name="email" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        {{#if loginErr}}
+        <div  class="text-danger">User Name or password is incorrect</div>
+        {{/if}}
       </div>
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Password</label>
