edit product implemented row, counter added in admin view-products

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,3 +44,12 @@ header{
 .link{
     text-decoration: none;
 }
+
+.counter-container{
+    counter-reset: products;
+}
+
+.row-counter::before{
+    content: counter(products);
+    counter-increment: products;
+}
