--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -7,7 +7,7 @@
                 <h5 class="card-title">{{this.name}}</h5>
                 <h6 class="text-secondary">{{this.category}}</h6>
                 <p class="card-text">{{this.description}}.</p>
-                <a href="/cart" class="btn btn-primary">{{this.price}}₹</a>
+                <a href="/add-to-cart/{{this._id}}" class="btn btn-primary">{{this.price}}₹</a>
             </div>
         </div>
         {{/each}}
