--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -14,7 +14,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/cart">Cart</a>
+                    <a class="nav-link" aria-current="page" href="/cart">Cart <span id="cartCount" class=" ms-1 badge  text-bg-primary">{{cartCount}}</span></a>
                 </li>
                 {{#if user}}
                 <li class="nav-item">
